fix no scrollbar on firefox + untrack item when name is set initially

--- a/src/components/LibraryContainer/Grid/Grid.css
+++ b/src/components/LibraryContainer/Grid/Grid.css
@@ -2,7 +2,16 @@
     display: flex;
     flex-direction: column;
     margin-top: -2px;
-    overflow: overlay;
+    padding-right: 8px;
+    overflow-y: overlay;
+}
+
+/* firefox does not support overlay scroll */
+@-moz-document url-prefix() {
+    .Grid {
+        padding-right: 0px;
+        overflow-y: auto;
+    }
 }
 
 .Grid::-webkit-scrollbar-track {
@@ -13,5 +22,4 @@
     display: flex;
     flex-wrap: wrap;
     padding-bottom: 4px;
-    padding-right: 8px;
 }
